Fixed glitch with css breaking on having too few items by forcing it to have event summaries divisible by 4.

--- a/Webbsida/Content/custom.css
+++ b/Webbsida/Content/custom.css
@@ -165,3 +165,9 @@ a{color:#0060aa}
     color: #0060aa;
     margin-top: 7px;
 }
+
+div #EventSummary .Borderless 
+{
+    border-style: none;
+    border: none;
+}
